Fix hero section overflow | Reverse pin thumb | show google map toolbar | use media steps on margins and paddings

--- a/src/sass/modules/_grid.scss
+++ b/src/sass/modules/_grid.scss
@@ -148,6 +148,7 @@
   @media screen and (#{$media-var}-width: $bvalue) {
     @include columnsBuilder($bname);
     @include gapsBuilder($bname);
+    @include margins_paddings_builder($bname);
 
     .reset-#{$bname} {
       margin-left: 0;
